# Flask-Test-App

./: .gitlab-ci.yml  Dockerfile  README.md  app.py  commands.sh  docker-compose.yml  pyproject.toml
.github/workflows/: main_test-fc-123.yml
flask-app/: values.yaml
flask-app/templates/: db-creds.yml  deployment.yaml
migrations/versions/: 855e7c5fd13e_create_users.py
