[tool.poetry]
name = "flask-sample-app"
version = "0.1.0"
description = ""
authors = ["Maxime Tusseau <maxime.tusseau@ingenico.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.3"
Flask-SQLAlchemy = "^3.0.3"
Flask-Migrate = "^4.0.4"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
